tests/errors/duplicate_net.nm
component Main {
    net A;
    net A;
}